force-app/main/default/objects/leaseworks__Transaction_Proposal__c/leaseworks__Transaction_Proposal__c.object-meta.xml
<CustomObject>
    <label>Transaction Prospect</label>
    <nameField>
        <label>Transaction Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>