force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Aircraft_In_Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_In_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is not needed.</description>
    <label>Z_Unused Aircraft In Transaction</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose an Aircraft In Transaction that belongs to same Transaction.</errorMessage>
        <filterItems>
            <field>leaseworks__Aircraft_In_Transaction__c.leaseworks__Transaction__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Transaction__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Aircraft_In_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Prospects</relationshipLabel>
    <relationshipName>Transaction_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>