force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Bid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bid__c</fullName>
    <label>Bid ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>