force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Bid_Deadline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bid_Deadline__c</fullName>
    <label>Bid Deadline</label>
    <type>Date</type>
</CustomField>