force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>