force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contact__c</fullName>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>