force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Date_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Bid__c</fullName>
    <label>Date of Bid</label>
    <type>Date</type>
</CustomField>