force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Date_Of_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Last_Interaction__c</fullName>
    <label>_Date Of Last Interaction</label>
    <type>Date</type>
</CustomField>