force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Detailed_Lease_Terms__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Detailed_Lease_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Lease Terms</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipName>Transaction_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>