force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Initial_Contact_Date__c</fullName>
    <description>10/02 - Changed from Initial contact to Last contact date</description>
    <inlineHelpText>Date on which last contact was made.</inlineHelpText>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>