force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Not_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture whether prospect is interested or not. By default it will be Yes.</description>
    <label>Not Interested?</label>
    <type>Checkbox</type>
</CustomField>