force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Transaction Prospects</relationshipLabel>
    <relationshipName>Transaction_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>