force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prospect_Type__c</fullName>
    <description>Type of the prospect</description>
    <inlineHelpText>Type of the prospect</inlineHelpText>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Lessor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>