force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Residual_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Residual_Value__c</fullName>
    <formula>leaseworks__Transaction__r.leaseworks__Ascend_Value__c * 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>