force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit__c</fullName>
    <formula>leaseworks__Detailed_Lease_Terms__r.leaseworks__Security_Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>