force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Interested in Aircraft</fullName>
            </value>
            <value>
                <fullName>Waiting For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Bid Received</fullName>
            </value>
            <value>
                <fullName>NDA Sent</fullName>
            </value>
            <value>
                <fullName>NDA Executed</fullName>
            </value>
            <value>
                <fullName>High Level Summary Sent</fullName>
            </value>
            <value>
                <fullName>Lease Summary Sent</fullName>
            </value>
            <value>
                <fullName>Not interested in Aircraft/No bid</fullName>
            </value>
            <value>
                <fullName>No response/ No bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>