force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Total_Bid_M_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Bid_M_F__c</fullName>
    <label>_Total Bid ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>