force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Total_Max_Bids_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Max_Bids_F__c</fullName>
    <label>_Total Max Bids</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>