force-app/main/default/objects/leaseworks__Transaction_Proposal__c/fields/leaseworks__Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>leaseworks__Transaction__c</referenceTo>
    <relationshipName>Transaction_Proposals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>