force-app/main/default/objects/leaseworks__Transaction_Proposal__c/recordTypes/leaseworks__Disposal.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Disposal</fullName>
    <active>true</active>
    <description>The Record Type for Disposal Transactions</description>
    <label>Disposal</label>
</RecordType>