force-app/main/default/objects/leaseworks__Transaction_Proposal__c/validationRules/leaseworks__Prospect_Must_Be_Entered.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Prospect_Must_Be_Entered</fullName>
    <active>true</active>
    <description>Choose or enter a prospect based on the prospect type.</description>
    <errorConditionFormula>AND( RecordType.Name==&apos;Disposal&apos;, OR(ISBLANK(TEXT(leaseworks__Prospect_Type__c)),
    AND(TEXT(leaseworks__Prospect_Type__c)==&apos;Lessor&apos;, ISBLANK(leaseworks__Lessor__c)),
  AND(TEXT(leaseworks__Prospect_Type__c)==&apos;Other&apos;, ISBLANK(leaseworks__Other_Party__c))
 )
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Prospect_Type__c</errorDisplayField>
    <errorMessage>Please choose a Prospect Type and select the appropriate prospect for the selected Type.</errorMessage>
</ValidationRule>